--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
+              "../node_modules/bootstrap/scss/bootstrap.scss",
+              "src/sass/styles.scss"
+              ],
+              "stylePreprocessorOptions": {
+              "includePaths": [
+                "../../node_modules/bootstrap/scss"
+              ]
+            },
+            "scripts": [
+              "../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -93,7 +101,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "sass/styles.scss"
             ],
             "scripts": []
           }
