--- a/angular.json
+++ b/angular.json
@@ -28,14 +28,9 @@
               "src/assets"
             ],
             "styles": [
-              "../node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootstrap/scss/bootstrap.scss",
               "src/sass/styles.scss"
               ],
-              "stylePreprocessorOptions": {
-              "includePaths": [
-                "../../node_modules/bootstrap/scss"
-              ]
-            },
             "scripts": [
             ]
           },
